# qvwm

./: .gitignore  Makefile  README  config.cache  config.h  config.status  configure.in  libtool  mkinstalldirs
doc/: FAQ.es  INSTALL.es  Makefile  Makefile.in  README.es
images/: Makefile  Makefile.in
man/: Makefile  Makefile.in
qvwm/: MEMO  configure
rc/: Makefile  Makefile.in
sounds/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  anim_image.cc  desktop.cc  focus_mgr.cc  lexsrc.cc  main.cc  main.h  menu.cc  parse.cc  taskbar.cc  util.cc  xlocale.h
src/bitmaps/: Makefile  Makefile.in  logo16.xpm  logo32.xpm
src/bitmaps/CVS/: Entries  Repository  Root
src/desktop/: Accessory.cc  Accessory.h  Makefile  Makefile.am  Makefile.in  ScreenSaver.cc  ScreenSaver.h  desktop.cc  desktop.h  icon.cc  icon.h  iconmenu.cc  iconmenu.h  info_display.cc  info_display.h  paging.cc  paging.h  rearrange.cc  switcher.cc  switcher.h
src/desktop/CVS/: Entries  Repository
src/dialog/: Makefile  Makefile.am  Makefile.in  confirm_dialog.cc  confirm_dialog.h  dialog.cc  dialog.h  exit_dialog.cc  exit_dialog.h  radio_button.cc  radio_button.h  radio_set.cc  radio_set.h  resource.h  system_dialog.cc  system_dialog.h
src/dialog/CVS/: Entries  Repository
src/frame/: AllBorders.cc  AllBorders.h  AllEdges.cc  AllEdges.h  Border.cc  Border.h  ClientArea.cc  ClientArea.h  CtrlButton.cc  CtrlButton.h  FrameButton.cc  FrameButton.h  InnerEdge.cc  InnerEdge.h  Makefile  Makefile.am  Makefile.in  WindowTitlebar.cc  WindowTitlebar.h  frame.cc
src/frame/CVS/: Entries  Repository
src/image/: AnimImage.cc  AnimImage.h  ExtraImage.cc  ExtraImage.h  Image.cc  Image.h  Makefile  Makefile.am  Makefile.in  PixmapImage.cc  PixmapImage.h
src/image/CVS/: Entries  Repository
src/lib/: ActionListener.h  Button.cc  Button.h  ComboBox.cc  ComboBox.h  Component.cc  Component.h  ImageButton.cc  ImageButton.h  Makefile  Makefile.am  Makefile.in  Menu.cc  Menu.h  MenuItem.cc  MenuItem.h  StringButton.cc  StringButton.h  Titlebar.cc  Titlebar.h  Toolbar.cc  Toolbar.h  Tooltip.cc  Tooltip.h  debug.cc  menu_func.cc  timer.cc  timer.h  util.cc  util.h
src/lib/CVS/: Entries  Repository
src/pager/: ActivePage.cc  ActivePage.h  Makefile  Makefile.am  Makefile.in  Miniature.cc  Miniature.h  PageArea.cc  PageArea.h  Pager.cc  Pager.h  PagerTitlebar.cc  PagerTitlebar.h
src/pager/CVS/: Entries  Repository
src/parser/: Makefile  Makefile.am  Makefile.in  lexsrc.cc  lexsrc.ll  parse.cc  parse.h  qvwmrc.cc  qvwmrc.h  yaccsrc.cc  yaccsrc.h  yaccsrc.yy
src/parser/CVS/: Entries  Repository
src/sound/: Audio.cc  Audio.h  AudioAu.cc  AudioAu.h  AudioDev.cc  AudioDevAlsa.cc  AudioDevAlsa.h  AudioDevEsd.cc  AudioDevEsd.h  AudioDevOss.cc  AudioDevOss.h  AudioDevSun.cc  AudioDevSun.h  AudioWav.cc  AudioWav.h  Makefile  Makefile.am  Makefile.in
src/sound/CVS/: Entries  Repository
src/taskbar/: ButtonToolbar.cc  ButtonToolbar.h  Makefile  Makefile.am  Makefile.in  TaskbarBorder.cc  TaskbarBorder.h  TaskbarButton.cc  TaskbarButton.h  taskbar.cc  taskbar.h
src/taskbar/CVS/: Entries  Repository
src/taskbar/shortcut/: Makefile  Makefile.am  Makefile.in  ShortcutToolbar.cc  ShortcutToolbar.h  TaskbarShortcut.cc  TaskbarShortcut.h
src/taskbar/shortcut/CVS/: Entries  Repository
src/taskbar/start/: Makefile  Makefile.am  Makefile.in  StartButton.cc  StartButton.h  StartMenu.cc  StartMenu.h  StartMenuItem.cc  StartMenuItem.h  SubMenu.cc  SubMenu.h  SubMenuItem.cc  SubMenuItem.h
src/taskbar/start/CVS/: Entries  Repository
src/taskbar/tray/: Indicator.cc  Indicator.h  Makefile  Makefile.am  Makefile.in  TaskTray.cc  TaskTray.h
src/taskbar/tray/CVS/: Entries  Repository
src/window/: Makefile  Makefile.am  Makefile.in  colormap.cc  configure.cc  exec.cc  exec.h  focus.cc  focus_mgr.cc  focus_mgr.h  move.cc  property.cc  qvwm.cc  qvwm.h  resize.cc  resize_sp.cc  window.cc
src/window/CVS/: Entries  Repository
src/wm/: Event.cc  Event.h  Function.cc  Function.h  Makefile  Makefile.am  Makefile.in  RemoteCommand.cc  gnome.cc  mwm.cc  session.cc  session.h
src/wm/CVS/: Entries  Repository
